Fix: contrast-ratio, headings weight and color codes

--- a/src/sass/theme/_child_theme_variables.scss
+++ b/src/sass/theme/_child_theme_variables.scss
@@ -2,10 +2,14 @@
 // To overwrite a Bootstrap variable you don´t have to touch the Bootstrap folder.
 // Just copy a variable from src/sass/assets/bootstrap5/_variables.scss, paste it here and edit the value.
 $font-family-sans-serif: "Arimo", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
-$headings-font-family: "Oswald", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
 
-$primary:rgb(73, 160, 201);
-$dark: rgb(15, 32, 40);
+$headings-font-family: "Oswald", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
+$headings-font-weight: 700;
+
+$min-contrast-ratio: 3;
+
+$primary: #4290b5;
+$dark: #0f2028;
 
 $nav-link-font-size: 14px;
 
